--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     
     <header class="header">
-        <img id="img2" src="../img/logo-header-mudado.jpg" alt="">
-        <img id="img1" src="../img/caver-new.jpg" alt="">
+        <img id="img2" src="img/logo-header-mudado.jpg" alt="">
+        <img id="img1" src="img/caver-new.jpg" alt="">
         <nav>
 
             <input  type="checkbox"  id="check">
@@ -40,21 +40,21 @@
             <div class="cards">
                 <div class="polaroids">
                     <h2>Cabelo + Barba</h2>
-                    <img src="../img/pngegg.png" alt="">
+                    <img src="img/pngegg.png" alt="">
                     <p>Pacote completo de cabelo e barba!</p>
                     <p class="valor">R$ 25,00</p>
                 </div>
 
                 <div class="polaroids p1">
                     <h2>Barba</h2>
-                    <img id="barba" src="../img/sobarba.png" alt="">
+                    <img id="barba" src="img/sobarba.png" alt="">
                     <p>Corte e desenho profissional de barba!</p>
                     <p class="valor">R$ 17,00</p>
                 </div>
 
                 <div class="polaroids">
                     <h2>Cabelo</h2>
-                    <img src="../img/socabelo1.png" alt="">
+                    <img src="img/socabelo1.png" alt="">
                     <p>Na tesoura ou na máquina, como o cliente preferir!</p>
                     <p class="valor ss">R$ 20,00</p>
                 </div>
@@ -68,7 +68,7 @@
 
             <div class="content-main">
                 <div class="f-loja">
-                    <img src="../img/foto-loja-frente.png" alt="">
+                    <img src="img/foto-loja-frente.png" alt="">
                     <div class="divtext">
                         <h2>Sobre nós!</h2>
                         <p>Localizada em São Gonçalo, a <strong>Barbearia Barber Shop's</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2016, nossa barbearia já é destaque na cidade e conquista novos clientes a cada dia.</p>
