--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
         <h3>&copy; Site Desenvolvido por MaykGomes!</h3>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
